k8s/dev/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: saleboomseo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/sm1523dev/saleboomseo-worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
